# APatch

./: .gitignore  build.gradle.kts  default_package_id_list  flake.nix  gradle.properties  kls_database.db
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 19r6mali03y8lq37dg2bx2c032mjd6s8-source  6wm7yj8ybvk2vdchijax2b9l7iiii7wm-source  8nrh24h3fnrn34n46inqpllkv2y1xkz5-source  b33g7nh3zf36awywa0bl29gjjlizhq7c-source  gn0n1lw0r34s785i6s1fz4vfqmrc88fc-source  k51q41ixv1v23iay5fn34p1851cqcqgh-source  n0jc2h8141m2xdnv5dzyyi9jpw4vi4r4-source  nf54wanlff5sf8i47amv3d6g0838rvcn-source  v8da5wgl4qb5dxwcc483j65vb1xl10y6-source
.github/workflows/: build.yml
ap_supercall/: Cargo.toml
ap_supercall/src/: lib.rs  sc.rs  su_profile.rs  supercall.rs  supercall_map.rs
apd/: Cargo.toml  build.rs
apd/src/: apd.rs  banner  cli.rs  defs.rs  event.rs  kpm.rs  lua.rs  magic_mount.rs  main.rs  module.rs  mount.rs  package.rs  pty.rs  restorecon.rs  sepolicy.rs  supercall.rs  utils.rs
app/: build.gradle.kts  proguard-rules.pro
app/src/apjni/: Cargo.toml
app/src/apjni/src/: lib.rs
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  apjni.cpp  jni_helper.hpp  supercall.h  type_traits.hpp
app/src/main/cpp/uapi/: scdefs.h
app/src/main/res/drawable/: github.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  info_circle_filled.xml
app/src/main/res/values-az/: strings.xml
gradle/: libs.versions.toml
(+67 files in other folders)
