[package]
name = "apjni"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
libc = "0.2.180"
anyhow = "1.0.100"
ap_supercall = { path = "../../../ap_supercall" }
android_logger = "0.15.1"
log = "0.4.29"
goblin = "0.10.4"

[profile.release]
strip = true
overflow-checks = false
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
