[package]
name = "apjni"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22.2"
libc = "0.2.182"
anyhow = { version = "1.0.102", default-features = false }
ap_supercall = { path = "../../../ap_supercall" }
android_logger = "0.15.1"
log = "0.4.29"

[profile.release]
strip = true
overflow-checks = false
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
